--- a/index.html
+++ b/index.html
@@ -1,97 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="style.css">
     <title>Muteeb Akram</title>
 </head>
-<body>
-    <div class="grid-2">
-        <div class="section-1">
-            <i class="fas fa-code fa-5x white"></i>
-            <h2>Muteeb Akram</h2>
-            <h3>Bengaluru, India</h3>
-            <a target="_blank" href="https://twitter.com/muteeb_akram"><i class="fab fa-twitter"></i></a>
-            <a target="_blank" href="https://www.instagram.com/muteebakram/"><i class="fab fa-instagram"></i></a>
-            <a target="_blank" href="https://www.linkedin.com/in/muteeb-akram/?originalSubdomain=in"><i class="fab fa-linkedin"></i></a>
-            <a target="_blank" href="https://github.com/muteebakram"><i class="fab fa-github"></i></a>
+
+<body class="body">
+    <h1 class="name">Muteeb Akram</h1>
+    <hr />
+    <div class="row">
+        <p class="row-block"><a href="#about">Home</a></p>
+        <p class="row-block"><a href="#experience">Experience</a></p>
+        <p class="row-block"><a href="#education">Education</a></p>
+        <p class="row-block"><a href="#research">Research</a></p>
+        <p class="row-block"><a href="#contact">Contact</a></p>
+    </div>
+
+    <div class="about" id="about">
+        <div class="about-para">
+            <p>
+                I am a computer science graduate student at the Kahlert School of Computing at the University of Utah. I
+                work with Prof. Vijay Nagarajan on re-imagining applications on CXL Memory. I am also a teaching
+                assistant for senior undergrad students to assist in their Capstone Project. My research interest lies
+                in the intersection of hardware/software and multi-node systems, i.e., computer architecture, operating
+                systems, and distributed systems.
+            </p>
+            <p>
+                Previously, I worked at Cisco Systems in the Cloud & Compute Team in Bangalore, India. Joined as a
+                college
+                intern and left as a Software Engineer 2. Here, I worked on cutting-edge enterprise hardware and
+                developed industry-standard Redfish APIs to diagnose, firmware update, and install operating systems for
+                Cisco UCS servers. Cisco was
+                my first stint in software and the world of systems. I thoroughly enjoyed the technical challenges and
+                developed a fond interest in computer systems.
+            </p>
+            <p>
+                Before that, I did my Bachelor's in Computer Science at R. V. College of Engineering (RVCE) in
+                Bangalore, India. I worked with Prof. Rajashree Shettar, Prof. Minal Moharir, and Prof. Veena Gadad on
+                the traffic decongestion system, HTTP3/QUIC protocol, and DMTF's Redfish API for server firmware
+                management, respectively. I was part of the entrepreneurship cell and volunteered for the Rotaract Club
+                of RVCE.
+            </p>
         </div>
-        <div class="section-2">
-            <h2>About</h2>
-            <p>Experienced Software Engineer with a demonstrated history of working in the cloud computing industry. Skilled in Computer Science, Linux, Algorithms, Object-Oriented Programming (OOP), and Python (Programming Language). Strong engineering professional with a Bachelor of Engineering - BE focused in Computer Science from R. V. College of Engineering, Bangalore. </p>
-            <h2>Experience</h2>
-            <p>Aug 2020 - Present • Software Engineer • Cisco System India Pvt Ltd, Bangalore.</p>
-            <p>Jan 2020 - July 2020 • Software Engineer Intern • Cisco System India Pvt Ltd, Bangalore.</p>
-
-            <h2>Skills</h2>
-            <p>
-                Web Development • 
-                Computer Networking • 
-                Container • 
-                Redfish • 
-                Object-Oriented Programming (OOP) • 
-                Computer Science • 
-                Programming • 
-                Operating Systems • 
-                Java • 
-                C (Programming Language) • 
-                C++ • 
-                Linux • 
-                SQL • 
-                Flask • 
-                Django • 
-                REST APIs • 
-                Node.js • 
-                JavaScript • 
-                JSON • 
-                Docker • 
-                Representational State Transfer (REST)
-            </p>
-            <h2>Projects</h2>
-
-            <p>
-                <h3>Enhance Cisco UCS Portal</h3>
-                <h4>Aug 2020 – Dec 2020</h4>
-                • Added ability for multiple users to log in and work separately instead of lock-based login.</br>
-                • Improved login and workspace experience by reducing the time from 40 minutes to 20 seconds.</br>
-                • Reducing the workspace size of users from 4GB to 40 MB by checking out only the required files.</br>
-                </br>
-                Learnings: Git automation, SQlite DB, Django</br>
-            </p>
-            <p>
-                <h3>Server Firmware Management using Redfish RESTful API's</h3>
-                <h4>Jan 2020 – Apr 2020</h4>
-                • Designed and developed API for firmware discovery, update, and monitor.</br>
-                • Implemented using Python, Flask & Redfish.</br>
-            <p>
-            <p>
-                <h3>Traffic Decongestion System</h3>
-                <h4>Feb 2019 – May 2019</h4>
-                • The project aims to reduce traffic by controlling signal duration at the junction.</br>
-                • Implemented using NodeMCU, Camera, and LEDs with Darknet Neural network.</br>
-                • Project was pitched to IISc professor to demonstrate micro-controllers and machine learning techniques can help in reducing traffic.</br>
-                • Worked closely with Dr. Rajashree Shettar, Professor at R V College of Engineering.</br>
-            <p>
-            <p>
-                <h3>Smart Parking System</h3>
-                <h4>Jul 2018 – Sep 2018</h4>
-                • Developed an Android application to find & reserver a vacant parking spot.</br>
-                • Implemented using IR sensor, NodeMCU, RaspberryPi with Java, Python & Tensorflow.</br>
-                • Project was selected IoT teachers to demonstrate in the Cisco IoT workshop 2018 at RVCE.</br>
-            </p>
-            <p>
-                <h3>Event Management System</h3>
-                <h4>Apr 2017 – May 2017</h4>
-                • Designed and developed a website to host and book events.</br>
-                • Implemented using HTML, CSS, PHP, JavaScript, SQL & Firebase.</br>
-            </p>
-            <h2>Contact</h2>
-            <a target="_blank" href="mailto: muteebakram@gmail.com">muteebakram@gmail.com</a>
+        <div class="about-image">
+            <img class="image" src="./assest/profile-image.jpg" alt="Profile Picture of Muteeb">
         </div>
     </div>
+
+    <div id="#experience">
+        <h3>Experience</h3>
+        <div>
+            <div class="company">
+                <div>
+                    <section class="company-title">Cisco Systems</section>
+                    Jan 2020 - July 2023
+                    <br>
+                    Bangalore, India
+                    <br>
+                    <br>
+                    <section class="role-title">Software Engineer II</section>
+                    <ul>
+                        <li>Engineered a diagnostic tool for Cisco servers, enabling troubleshooting of CPUs, DIMMs, &
+                            PCIe devices. Achieved 40% reduction in downtime & 10% decrease in RMA costs, streamlining
+                            debugging for TAC.
+                        </li>
+                        <li>Worked on Baseboard Management Controller to streamline low-level firmware and BIOS update,
+                            resulting in a 15% reduction in system downtime and improved system stability.
+                        </li>
+                        <li>Implemented thread synchronization to concurrently install operating systems and update the
+                            firmware of 100+ Cisco UCS servers at once.
+                        </li>
+                    </ul>
+                    <section class="role-title">Software Engineer</section>
+                    <ul>
+                        <li>Designed a Data Sanitization framework to fully wipe data from storage controllers, NVMe &
+                            disks.
+                        </li>
+                        <li>Migrate from legacy build systems to container-based CI/CD builds utilizing runC and
+                            dockerd runtime engines, resulting in a notable 20% acceleration in build times.
+                        </li>
+                        <li>Owned and revamped Cisco firmware application front-end with web components and integrated
+                            12+ back-end APIs. Shipped the application in a customized Linux container, offering CLI,
+                            UI, & REST interfaces.
+                        </li>
+                    </ul>
+                    <section class="role-title">Software Engineer Intern</section>
+                    <ul>
+                        <li>
+                            Developed 3 new industry-standard Redfish APIs for firmware discovery, update, & monitoring.
+                        </li>
+                        <li>
+                            Ported 7,000+ source code from Python2 to Python3 with no performance impact.
+                        </li>
+                        <li>Owned and maintained Cisco Inventory Portal by automating source check-ins, creating
+                            SSH key-pairs, and optimizing large NFS storage, resulting in a 30% reduction in
+                            storage & 2x API performance.
+                        </li>
+                    </ul>
+                </div>
+                <div class="company-images">
+                    <figure>
+                        <img class="company-image" src="./assest/cisco0.png" alt="Cisco Onboarding">
+                        <figcaption>Cisco Internship Onboarding</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="company-image" src="./assest/cisco1.png" alt="Cisco Team Outing">
+                        <figcaption>Cisco Team Outing</figcaption>
+                    </figure>
+                    <figure>
+                        <img class="company-image" src="./assest/cisco2.png" alt="Cisco Last Working Day">
+                        <figcaption>Cisco Last Working Day</figcaption>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="education">
+        <h3>Education</h3>
+        <div>
+            <div>
+                <section class="education-title">The University of Utah</section>
+            </div>
+            <div>
+                <section class="education-title">R. V. College of Engineering (RVCE)</section>
+            </div>
+            <div>
+                <section class="education-title">Deeksha Reva Independent PU College</section>
+            </div>
+            <div>
+                <section class="education-title">Deepayan Secondary School</section>
+            </div>
+        </div>
+    </div>
+
+    <div id="#research">
+        <h3>Research</h3>
+    </div>
+
+    <div id="contact">
+        <h3>Contact</h3>
+        <ul>
+            <li>Email: <a href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a></li>
+            <li>Github: <a href="https://github.com/muteebakram">github.com/muteebakram</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/muteeb-akram/">linkedin.com/in/muteeb-akram/</a></li>
+            <li>Google Scholar: <a
+                    href="https://scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en">scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en</a>
+            </li>
+        </ul>
+        If you search extensively, you'll discover my presence on Twitter and Instagram.
+    </div>
 </body>
+
 </html>
