--- a/index.html
+++ b/index.html
@@ -24,26 +24,29 @@
     <div class="about" id="about">
         <div class="about-para">
             <p>
-                I am a computer science graduate student at the Kahlert School of Computing at the University of Utah. I
-                work with Prof. Vijay Nagarajan on re-imagining applications on CXL Memory. I am also a teaching
-                assistant for senior undergrad students to assist in their Capstone Project. My research interest lies
-                in the intersection of hardware/software and multi-node systems, i.e., computer architecture, operating
+                I'm currently pursuing my graduate studies in computer science at the Kahlert School of Computing,
+                University of Utah. Under the guidance of Prof. Vijay Nagarajan, my research focuses on re-imagining
+                applications on CXL Memory. Additionally, I serve as a teaching assistant, supporting senior
+                undergraduate students in their Capstone Project. My research interest lies in the intersection of
+                hardware/software and multi-node systems, i.e., computer architecture, operating
                 systems, and distributed systems.
             </p>
             <p>
-                Previously, I worked at Cisco Systems in the Cloud & Compute Team in Bangalore, India. Joined as a
-                college
-                intern and left as a Software Engineer 2. Here, I worked on cutting-edge enterprise hardware and
-                developed industry-standard Redfish APIs to diagnose, firmware update, and install operating systems for
-                Cisco UCS servers. Cisco was
-                my first stint in software and the world of systems. I thoroughly enjoyed the technical challenges and
+                Before, I was part of the Cloud & Compute Team at Cisco Systems in Bangalore, India. I started as a
+                college intern and progressed to the role of Software Engineer 2 before leaving. During my time there, I
+                worked on cutting-edge enterprise hardware projects and played a key role in developing
+                industry-standard Redfish APIs. These APIs were designed for diagnosing issues, updating firmware, and
+                installing operating systems for Cisco UCS servers. My experience at Cisco marked my introduction to the
+                software field and the intricacies of systems.I found immense satisfaction in tackling technical
+                challenges and developed a keen interest in computer systems.
                 developed a fond interest in computer systems.
             </p>
             <p>
                 Before that, I did my Bachelor's in Computer Science at R. V. College of Engineering (RVCE) in
                 Bangalore, India. I worked with Prof. Rajashree Shettar, Prof. Minal Moharir, and Prof. Veena Gadad on
-                the traffic decongestion system, HTTP3/QUIC protocol, and DMTF's Redfish API for server firmware
-                management, respectively. I was part of the entrepreneurship cell and volunteered for the Rotaract Club
+                the traffic decongestion system, HTTP3/QUIC protocol survey, and DMTF's Redfish API for server firmware
+                management, respectively. Additionally, I was member of the entrepreneurship cell and a volunteer for
+                the Rotaract Club
                 of RVCE.
             </p>
         </div>
@@ -126,15 +129,19 @@
         <div>
             <div>
                 <section class="education-title">The University of Utah</section>
+                <i>Master of Science, Computer Science</i>
             </div>
             <div>
                 <section class="education-title">R. V. College of Engineering (RVCE)</section>
+                <i>Bachelor of Engineering, Computer Science & Engineering</i>
             </div>
             <div>
                 <section class="education-title">Deeksha Reva Independent PU College</section>
+                <i>Pre-University Education, Computer Science</i>
             </div>
             <div>
                 <section class="education-title">Deepayan Secondary School</section>
+                <i>High School, Class X</i>
             </div>
         </div>
     </div>
