--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="style.css">
-    <title>Muteeb Akram</title>
-</head>
+<script type="module" src="script.js"></script>
+
+<my-header></my-header>
 
 <body class="body">
-    <h1 class="name">Muteeb Akram</h1>
-    <hr />
-    <div class="row">
-        <p class="row-block"><a href="#about">Home</a></p>
-        <p class="row-block"><a href="#experience">Experience</a></p>
-        <p class="row-block"><a href="#education">Education</a></p>
-        <p class="row-block"><a href="#research">Research</a></p>
-        <p class="row-block"><a href="#contact">Contact</a></p>
-    </div>
-
     <div class="about" id="about">
         <div class="about-para">
             <p>
@@ -51,7 +36,7 @@
             </p>
         </div>
         <div class="about-image">
-            <img class="image" src="./assest/profile-image.jpg" alt="Profile Picture of Muteeb">
+            <img class="profile-image" src="./assest/profile-image.jpg" alt="Profile Picture of Muteeb">
         </div>
     </div>
 
@@ -128,26 +113,45 @@
         <h3>Education</h3>
         <div>
             <div>
-                <section class="education-title">The University of Utah</section>
-                <i>Master of Science, Computer Science</i>
+                <section class="education-title">Kahlert School of Computing, The University of Utah</section>
+                <section class="role-title">Master of Science, Computer Science</section>
+                Aug 2023 - May 2025
+                <br>
+                Salt Lake City, Utah, USA
             </div>
+            <br>
             <div>
                 <section class="education-title">R. V. College of Engineering (RVCE)</section>
-                <i>Bachelor of Engineering, Computer Science & Engineering</i>
+                <section class="role-title">Bachelor of Engineering, Computer Science & Engineering</section>
+                Aug 2016 - July 2020
+                <br>
+                Mysore Road, Bangalore, Karnataka, India
             </div>
+            <br>
             <div>
                 <section class="education-title">Deeksha Reva Independent PU College</section>
-                <i>Pre-University Education, Computer Science</i>
+                <section class="role-title">Pre-University Education, Computer Science</section>
+                May 2014 - June 2016
+                <br>
+                Yelahanka, Bangalore, Karnataka, India
             </div>
+            <br>
             <div>
                 <section class="education-title">Deepayan Secondary School</section>
-                <i>High School, Class X</i>
+                <section class="role-title">Kinder Garden, Primary, and High School</section>
+                Jan 2001 - April 2014
+                <br>
+                NC Colony, Hospet, Karnataka, India
             </div>
         </div>
     </div>
 
-    <div id="#research">
-        <h3>Research</h3>
+    <div id="#projects">
+        <h3>Projects</h3>
+    </div>
+
+    <div id="#publications">
+        <h3>Publications</h3>
     </div>
 
     <div id="contact">
