Separate pages with web component

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,20 @@
-<script>
-    let template = document.getElementById("header");  // Get the template element
-    let clone = template.content.cloneNode(true);  // Clone the template content
-    document.body.appendChild(clone);  // Insert the clone into the document body
-</script>
+<!DOCTYPE html>
+<html lang="en">
+
+<script type="module" src="script.js"></script>
+
+<my-header title="Contact"></my-header>
+
+<body class="body">
+    <div id="contact">
+        <ul>
+            <li>Email: <a href="mailto://muteebakram@gmail.com">muteebakram@gmail.com</a></li>
+            <li>Github: <a href="https://github.com/muteebakram">github.com/muteebakram</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/muteeb-akram/">linkedin.com/in/muteeb-akram/</a></li>
+            <li>Google Scholar: <a
+                    href="https://scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en">scholar.google.com/citations?user=miOm8JMAAAAJ&hl=en</a>
+            </li>
+        </ul>
+        If you search extensively, you'll discover my presence on Twitter and Instagram.
+    </div>
+</body>
