--- a/education.html
+++ b/education.html
@@ -1,1 +1,49 @@
-<iframe src="./header.html" width="100%" height="fit-content" frameborder="0" scrolling="no"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+
+<script type="module" src="script.js"></script>
+
+<my-header title="Education"></my-header>
+
+<body class="body">
+    <div id="education">
+        <div>
+            <div>
+                <section class="education-title">Kahlert School of Computing, The University of Utah</section>
+                <section class="degree-title">Master of Science, Computer Science</section>
+                Aug 2023 - May 2025
+                <br>
+                Salt Lake City, Utah, USA
+                <br>
+                <p>u1471482@umail.utah.edu</p>
+            </div>
+            <br>
+            <div>
+                <section class="education-title">R. V. College of Engineering (RVCE)</section>
+                <section class="degree-title">Bachelor of Engineering, Computer Science & Engineering</section>
+                Aug 2016 - July 2020
+                <br>
+                Mysore Road, Bangalore, Karnataka, India
+                <br>
+                <p>muteeban.cs16@rvce.edu.in</p>
+            </div>
+            <br>
+            <div>
+                <section class="education-title">Deeksha Reva Independent PU College</section>
+                <section class="degree-title">Pre-University Education, Computer Science</section>
+                May 2014 - June 2016
+                <br>
+                Yelahanka, Bangalore, Karnataka, India
+            </div>
+            <br>
+            <div>
+                <section class="education-title">Deepayan Secondary School</section>
+                <section class="degree-title">Kinder Garden, Primary, and High School</section>
+                Jan 2001 - April 2014
+                <br>
+                NC Colony, Hospet, Karnataka, India
+            </div>
+        </div>
+    </div>
+
+</body>
