--- a/experience.html
+++ b/experience.html
@@ -1,1 +1,74 @@
-<iframe src="./header.html" width="100%" height="fit-content" frameborder="0" scrolling="no"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+
+<script type="module" src="script.js"></script>
+
+<my-header title="Experience"></my-header>
+
+<body class="body">
+    <div id="#experience">
+        <div class="company">
+            <div>
+                <section class="company-title">Cisco Systems</section>
+                Jan 2020 - July 2023
+                <br>
+                Bangalore, India
+                <br>
+                <p>mutnawaz@cisco.com</p>
+                <section class="role-title">Software Engineer II</section>
+                <ul>
+                    <li>Engineered a diagnostic tool for Cisco servers, enabling troubleshooting of CPUs, DIMMs, &
+                        PCIe devices. Achieved 40% reduction in downtime & 10% decrease in RMA costs, streamlining
+                        debugging for TAC.
+                    </li>
+                    <li>Worked on Baseboard Management Controller to streamline low-level firmware and BIOS update,
+                        resulting in a 15% reduction in system downtime and improved system stability.
+                    </li>
+                    <li>Implemented thread synchronization to concurrently install operating systems and update the
+                        firmware of 100+ Cisco UCS servers at once.
+                    </li>
+                </ul>
+                <section class="role-title">Software Engineer</section>
+                <ul>
+                    <li>Designed a Data Sanitization framework to fully wipe data from storage controllers, NVMe &
+                        disks.
+                    </li>
+                    <li>Migrate from legacy build systems to container-based CI/CD builds utilizing runC and
+                        dockerd runtime engines, resulting in a notable 20% acceleration in build times.
+                    </li>
+                    <li>Owned and revamped Cisco firmware application front-end with web components and integrated
+                        12+ back-end APIs. Shipped the application in a customized Linux container, offering CLI,
+                        UI, & REST interfaces.
+                    </li>
+                </ul>
+                <section class="role-title">Software Engineer Intern</section>
+                <ul>
+                    <li>
+                        Developed 3 new industry-standard Redfish APIs for firmware discovery, update, & monitoring.
+                    </li>
+                    <li>
+                        Ported 7,000+ source code from Python2 to Python3 with no performance impact.
+                    </li>
+                    <li>Owned and maintained Cisco Inventory Portal by automating source check-ins, creating
+                        SSH key-pairs, and optimizing large NFS storage, resulting in a 30% reduction in
+                        storage & 2x API performance.
+                    </li>
+                </ul>
+            </div>
+            <div class="company-images">
+                <figure>
+                    <img class="company-image" src="./assest/cisco0.png" alt="Cisco Onboarding">
+                    <figcaption>Cisco Internship Onboarding</figcaption>
+                </figure>
+                <figure>
+                    <img class="company-image" src="./assest/cisco1.png" alt="Cisco Team Outing">
+                    <figcaption>Cisco Team Outing</figcaption>
+                </figure>
+                <figure>
+                    <img class="company-image" src="./assest/cisco2.png" alt="Cisco Last Working Day">
+                    <figcaption>Cisco Last Working Day</figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>
+</body>
