--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,11 @@
-<iframe src="./header.html" width="100%" height="fit-content" frameborder="0" scrolling="no"></iframe>
+<!DOCTYPE html>
+<html lang="en">
+
+<script type="module" src="script.js"></script>
+
+<my-header title="Projects"></my-header>
+
+<body class="body">
+    <div id="#projects">
+    </div>
+</body>
