Mobile view, link visited remove, add publications

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
             systems, and distributed systems.
         </p>
         <p>
-            Before, I was part of the Cloud & Compute Team at Cisco Systems in Bangalore, India. I started as a
-            college intern and progressed to the role of Software Engineer 2 before leaving. During my time there, I
-            worked on cutting-edge enterprise hardware projects and played a key role in developing
-            industry-standard Redfish APIs. These APIs were designed for diagnosing issues, updating firmware, and
+            Before, I was part of the <a href="https://www.cisco.com/site/us/en/products/computing/index.html">
+                Cloud & Compute</a> Team at <a href="https://www.cisco.com">Cisco Systems</a> in Bangalore, India. I
+            started as a college intern and progressed to the role of Software Engineer 2 before leaving. During my time
+            there, I worked on cutting-edge enterprise hardware projects and played a key role in developing
+            industry-standard DMTF Redfish APIs. These APIs were designed for diagnosing issues, updating firmware, and
             installing operating systems for Cisco UCS servers. My experience at Cisco marked my introduction to the
             software field and the intricacies of systems.I found immense satisfaction in tackling technical
             challenges and developed a keen interest in computer systems.
@@ -43,7 +44,7 @@
         <p>
             Before that, I did my Bachelor's in Computer Science at R. V. College of Engineering (RVCE) in
             Bangalore, India. I worked with Prof. Rajashree Shettar, Prof. Minal Moharir, and Prof. Veena Gadad on
-            the traffic decongestion system, HTTP3/QUIC protocol survey, and DMTF's Redfish API for server firmware
+            the traffic decongestion system, HTTP3/QUIC protocol survey, and server firmware
             management, respectively. Additionally, I was member of the entrepreneurship cell and a volunteer for
             the Rotaract Club
             of RVCE.
