--- a/publications.html
+++ b/publications.html
@@ -7,5 +7,32 @@
 
 <body class="body">
     <div id="#publications">
+        <ol>
+            <li>
+                <a target="_blank"
+                    href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9777199&isnumber=9776641">
+                    <strong>A Detail Survey on QUIC and its Impact on Network Data Transmission</strong>
+                </a>
+                <br>2022 6th International Conference on Trends in Electronics and Informatics (ICOEI), Tirunelveli,
+                India, 2022, pp. 378-385, doi: 10.1109/ICOEI53556.2022.9777199.
+                <br>
+                <i>Pratiksha Narasimha Nayak G; Nimisha Dey; Neha N; Malavika Hariprasad; Sandhya S; Minal Moharir;
+                    <strong>Muteeb Akram</strong></i>
+            </li>
+            <br>
+            <li>
+                <a target="_blank" href="https://www.irjet.net/archives/V7/i5/IRJET-V7I51018.pdf">
+                    <strong>Server Firmware Management using DMTF Redfish REST APIs</strong>
+                </a>
+                <br>
+                May 2020, International Research Journal of Engineering and Technology (IRJET)
+                <br>
+                <i><strong>Muteeb Akram Nawaz</strong>, Veena Gadad (Dept. of Computer Science and Engineering, R V
+                    College of
+                    Engineering, Karnataka, India)</i>
+                <br>
+                ( <a href="https://www.dmtf.org/about/academicalliance#redfish">DMTF Mention</a> )
+            </li>
+        </ol>
     </div>
 </body>
